[project]
name = "iot"
version = "0.1.0"
description = "IoT Network Scanner"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0"
]

[project.scripts]
iot = "iot.main:app"
net = "net.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
